# evil-islands-translator

./: .gitignore  Cargo.toml  readme.md
pseudo-parti/: Cargo.toml
pseudo-parti/src/: lib.rs
src/: main.rs
tools/: menu_add.reg  menu_delete.reg
tools/eipacker/: readme.txt
translate/base/: texts_en.res  texts_ge.res  texts_pl.res  texts_ru.res
translate/base/texts_en_res/: ARMOR Gipat_Brigand_Boots Tiger_Hide  ARMOR Gipat_Brigand_Boots Tiger_Hide_White  ARMOR Gipat_Brigand_Gloves Tiger_Hide  ARMOR Gipat_Brigand_Gloves Tiger_Hide_White  ARMOR Gipat_Brigand_Helm Tiger_Hide  ARMOR Gipat_Brigand_Helm Tiger_Hide_White  ARMOR Gipat_Brigand_Leggins Tiger_Hide  ARMOR Gipat_Brigand_Leggins Tiger_Hide_White  ARMOR Gipat_Brigand_Pants Tiger_Hide  ARMOR Gipat_Brigand_Pants Tiger_Hide_White  ARMOR Gipat_Brigand_Plate Tiger_Hide  ARMOR Gipat_Brigand_Plate Tiger_Hide_White  ARMOR Gipat_Brigand_Shirt Tiger_Hide  ARMOR Gipat_Brigand_Shirt Tiger_Hide_White  ARMOR Gipat_High_Boots Tanned_Thin  ARMOR Gipat_High_Boots Thick  ARMOR Gipat_High_Boots Thin  ARMOR Gipat_High_Gloves Tanned_Thin  ARMOR Gipat_High_Gloves Thick  ARMOR Gipat_High_Gloves Thin  ARMOR Gipat_High_Helm Tanned_Thin  ARMOR Gipat_High_Helm Thick  ARMOR Gipat_High_Helm Thin  ARMOR Gipat_High_Leggins Tanned_Thin  ARMOR Gipat_High_Leggins Thick  ARMOR Gipat_High_Leggins Thin  ARMOR Gipat_High_Pants Tanned_Thin  ARMOR Gipat_High_Pants Thick  ARMOR Gipat_High_Pants Thin  ARMOR Gipat_High_Plate Tanned_Thin  ARMOR Gipat_High_Plate Thick  ARMOR Gipat_High_Plate Thin  (+2599 more)
translate/classic-mod/: texts_cm_ru.res
(+23862 files in other folders)
