[package]
name = "pseudo-parti"
version = "0.1.0"
authors = ["fulara <aleksander.fular@binance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
console = "0.14"
crossbeam-channel = "0.5"
mio = { version = "0.7", features = ["net", "os-poll"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1"}
signal-hook = "0.3"
structopt = "0.3"